--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ user_description: Programmer (Interested in Philosophy and Math)
 notes_url: "https://simply-jekyll.netlify.app"
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
-copyright_name: John Doe
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://simply-jekyll.netlify.app/" # the base hostname & protocol for your site, e.g. http://example.com
+copyright_name: Dayda
+baseurl: "/"
+url: "http://127.0.0.1:4000/"
 encoding: utf-8
 
 # Build settings
