--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Simply Jekyll
-name: John Doe
-user_description: Programmer (Interested in Philosophy and Math)
-notes_url: "https://simply-jekyll.netlify.app"
+title: Dayda
+name: Dayda
+user_description: Making data more discoverable and usable.
+resources_url: "https://simply-jekyll.netlify.app"
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
 copyright_name: Dayda
@@ -28,9 +28,9 @@ sass:
   style: compressed
 
 collections:
-    notes:
+    resources:
       output: true
-      permalink: /notes/:title
+      permalink: /resources/:title
 
 disqus:
   shortname: raghuveerdotnet
@@ -45,7 +45,7 @@ defaults:
       content-type: post
   - scope:
       path: ""
-      type: notes
+      type: resources
     values:
       layout: post
-      content-type: notes
+      content-type: resources
