--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 title: Dayda
 name: Dayda
 user_description: Making data more discoverable and usable.
-resources_url: "https://simply-jekyll.netlify.app"
+notes_url: "https://simply-jekyll.netlify.app"
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
 copyright_name: Dayda
 baseurl: "/"
-url: "http://127.0.0.1:4000/"
+url: http://127.0.0.1:4000/
 encoding: utf-8
 
-# Build settings
 theme: null
 plugins:
   - jekyll-feed 
@@ -27,25 +26,5 @@ kramdown:
 sass:
   style: compressed
 
-collections:
-    resources:
-      output: true
-      permalink: /resources/:title
-
 disqus:
   shortname: raghuveerdotnet
-
-defaults:
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: post
-      permalink: /posts/:title
-      content-type: post
-  - scope:
-      path: ""
-      type: resources
-    values:
-      layout: post
-      content-type: resources
