--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
 title: Dayda
 name: Template
-user_description: Making data more discoverable and usable.
+description: Making data more discoverable and usable.
+about: This is the about the entity.
+source_url: http://example.com
+source_contact_type: general
+source_phone: +1 555-555-5555
+source_email: info@example.com
+source_catalog: data.gov
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
 url: http://127.0.0.1:4000/
